# edu-demo-cpp-cmake-consumer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
ext/: CMakeLists.txt
src/: CMakeLists.txt  consumer_logic.cpp  consumer_logic.h  main.cpp
test/: consumer_logic_test.cpp
